c/examples/writing-a-c-compiler-tests/tests/chapter_12/invalid_lex/invalid_suffix.c
int main(void) {
    /* An unsigned constant suffix should only have one 'u' */
    return 0uu;
}